--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,6 +53,9 @@
       "path": "packages/legend-extension-dsl-persistence"
     },
     {
+      "path": "packages/legend-extension-dsl-mastery"
+    },
+    {
       "path": "packages/legend-extension-external-format-json-schema"
     },
     {
